# lmutils.r

./: CITATION.cff  DESCRIPTION  NAMESPACE  README.md  install.sh
.github/workflows/: release.yml
R/: extendr-wrappers.R
man/: Mat.Rd  calculate_r2.Rd  calculate_r2_ranges.Rd  column_p_values.Rd  combine_matrices.Rd  combine_rows.Rd  combine_vectors.Rd  compute_r2.Rd  compute_r2_tjur.Rd  convert_file.Rd  convert_files.Rd  crossprod.Rd  cv_elnet.Rd  cv_elnet_foldids.Rd  dedup.Rd  df_combine.Rd  df_sort_asc.Rd  df_split.Rd  df_to_matrix_file.Rd  disable_predicted.Rd  dont_ignore_core_parallel_errors.Rd  enable_predicted.Rd  extend_matrices.Rd  ignore_core_parallel_errors.Rd  ld_prune.Rd  linear_regression.Rd  lmutils-package.Rd  load.Rd  load_matrix.Rd  logistic_regression.Rd  logistic_regression_firth.Rd  logistic_regression_no_intercept.Rd  map_from_pairs.Rd  match_rows.Rd  match_rows_dir.Rd  mean.Rd  median.Rd  mul.Rd  new_column_from_map.Rd  new_column_from_map_pairs.Rd  (+17 more)
scripts/: df_to_rkyv.r  rdata_dir_to_rkyv.sh
src/: Makevars  Makevars.in  Makevars.win  Makevars.win.in  entrypoint.c  lmutils-win.def
src/rust/: Cargo.toml
src/rust/src/: lib.rs  old.rs  utils.rs
tools/: config.R
