[package]
name = "lmutils-r"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "lmutils"

[dependencies]
extendr-api = { version = "0.6.0", features = ["either"] }
rayon = "1.10.0"
# lmutils = { version = "0.1", path = "../../../lmutils" }
lmutils = "0.1"
# lmutils = { git = "https://github.com/mrvillage/lmutils" }
flate2 = "1.0.30"
faer = "0.19.0"
log = "0.4.21"
env_logger = "0.11.3"
num_cpus = "1.16.0"
regex = "1.10.5"
